# object-detection-inference

./: CMakeLists.txt  main.cpp
cmake/: LinkBackend.cmake  ONNXRuntime.cmake  SetCompilerFlags.cmake
inc/: InferenceBackendSetup.hpp  Logger.hpp  common.hpp  utils.hpp
src/detectors/: Detector.cpp  Detector.hpp  RtDetrUltralytics.cpp
src/inference-engines/: InferenceInterface.cpp  InferenceInterface.hpp
src/inference-engines/onnx-runtime/: ORTInfer.cpp  ORTInfer.hpp
